Fix layout issue in mobile

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -46,6 +46,7 @@ body
 
 #page
   .page-header
+    height: 46px
     margin-top: 20px
     position: relative
     h1, h2, h3, h4, h5, h6
